// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphite: bar seq 1`] = `
Seq {
  "data": Array [
    Single {
      "data": Object {
        "data": Object {
          "fullName": "foo → *",
          "runner": [Function],
          "subtype": "event",
        },
        "type": 12,
      },
    },
    Multi {
      "data": Set {
        Seq {
          "data": Array [
            Single {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "type": 11,
              },
            },
            Single {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "type": 14,
              },
            },
            Single {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "type": 14,
              },
            },
            Single {
              "data": Object {
                "data": Object {
                  "store": Atom {
                    "value": "foo | 1 | 11",
                  },
                },
                "type": 15,
              },
            },
            Multi {
              "data": Set {
                Seq {
                  "data": Array [
                    Single {
                      "data": Object {
                        "data": Object {
                          "reduce": [Function],
                        },
                        "type": 11,
                      },
                    },
                    Single {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "type": 14,
                      },
                    },
                    Single {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "type": 14,
                      },
                    },
                    Single {
                      "data": Object {
                        "data": Object {
                          "store": Atom {
                            "value": 12,
                          },
                        },
                        "type": 15,
                      },
                    },
                    Multi {
                      "data": Set {},
                    },
                  ],
                },
              },
            },
          ],
        },
        Single {
          "data": Object {
            "data": Object {
              "runner": [Function],
            },
            "type": 13,
          },
        },
      },
    },
  ],
}
`;

exports[`graphite: bar seq 2`] = `
Seq {
  "data": Array [
    Single {
      "data": Object {
        "data": Object {
          "fullName": "foo → *",
          "runner": [Function],
          "subtype": "event",
        },
        "type": 12,
      },
    },
    Multi {
      "data": Set {
        Seq {
          "data": Array [
            Single {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "type": 11,
              },
            },
            Single {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "type": 14,
              },
            },
            Single {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "type": 14,
              },
            },
            Single {
              "data": Object {
                "data": Object {
                  "store": Atom {
                    "value": "foo | 1 | 11",
                  },
                },
                "type": 15,
              },
            },
            Multi {
              "data": Set {
                Seq {
                  "data": Array [
                    Single {
                      "data": Object {
                        "data": Object {
                          "reduce": [Function],
                        },
                        "type": 11,
                      },
                    },
                    Single {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "type": 14,
                      },
                    },
                    Single {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "type": 14,
                      },
                    },
                    Single {
                      "data": Object {
                        "data": Object {
                          "store": Atom {
                            "value": 12,
                          },
                        },
                        "type": 15,
                      },
                    },
                    Multi {
                      "data": Set {},
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`graphite: foo seq 1`] = `
Seq {
  "data": Array [
    Single {
      "data": Object {
        "data": Object {
          "fullName": "foo",
          "runner": [Function],
          "subtype": "event",
        },
        "type": 12,
      },
    },
    Multi {
      "data": Set {
        Seq {
          "data": Array [
            Single {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "type": 11,
              },
            },
            Single {
              "data": Object {
                "data": Object {
                  "fullName": "foo → *",
                  "runner": [Function],
                  "subtype": "event",
                },
                "type": 12,
              },
            },
            Multi {
              "data": Set {
                Seq {
                  "data": Array [
                    Single {
                      "data": Object {
                        "data": Object {
                          "reduce": [Function],
                        },
                        "type": 11,
                      },
                    },
                    Single {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "type": 14,
                      },
                    },
                    Single {
                      "data": Object {
                        "data": Object {
                          "filter": [Function],
                        },
                        "type": 14,
                      },
                    },
                    Single {
                      "data": Object {
                        "data": Object {
                          "store": Atom {
                            "value": "foo | 1 | 11",
                          },
                        },
                        "type": 15,
                      },
                    },
                    Multi {
                      "data": Set {
                        Seq {
                          "data": Array [
                            Single {
                              "data": Object {
                                "data": Object {
                                  "reduce": [Function],
                                },
                                "type": 11,
                              },
                            },
                            Single {
                              "data": Object {
                                "data": Object {
                                  "filter": [Function],
                                },
                                "type": 14,
                              },
                            },
                            Single {
                              "data": Object {
                                "data": Object {
                                  "filter": [Function],
                                },
                                "type": 14,
                              },
                            },
                            Single {
                              "data": Object {
                                "data": Object {
                                  "store": Atom {
                                    "value": 12,
                                  },
                                },
                                "type": 15,
                              },
                            },
                            Multi {
                              "data": Set {},
                            },
                          ],
                        },
                      },
                    },
                  ],
                },
                Single {
                  "data": Object {
                    "data": Object {
                      "runner": [Function],
                    },
                    "type": 13,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`graphite: show bar 1`] = `
"Seq [
  1. Single Emit(foo → *),
  2. Multi [
     *  Seq [
        1. Single Compute,
        2. Single Filter,
        3. Single Filter,
        4. Single Update,
        5. Multi [
           *  Seq [
              1. Single Compute,
              2. Single Filter,
              3. Single Filter,
              4. Single Update,
              5. Multi []
           ]
        ]
     ],
     *  Single Run
  ]
]"
`;

exports[`graphite: show bar 2`] = `
"Seq [
  1. Single Emit(foo → *),
  2. Multi [
     *  Seq [
        1. Single Compute,
        2. Single Filter,
        3. Single Filter,
        4. Single Update,
        5. Multi [
           *  Seq [
              1. Single Compute,
              2. Single Filter,
              3. Single Filter,
              4. Single Update,
              5. Multi []
           ]
        ]
     ]
  ]
]"
`;

exports[`graphite: show foo 1`] = `
"Seq [
  1. Single Emit(foo),
  2. Multi [
     *  Seq [
        1. Single Compute,
        2. Single Emit(foo → *),
        3. Multi [
           *  Seq [
              1. Single Compute,
              2. Single Filter,
              3. Single Filter,
              4. Single Update,
              5. Multi [
                 *  Seq [
                    1. Single Compute,
                    2. Single Filter,
                    3. Single Filter,
                    4. Single Update,
                    5. Multi []
                 ]
              ]
           ]
        ]
     ]
  ]
]"
`;

exports[`graphite: show store1 1`] = `
"Seq [
  1. Single Filter,
  2. Single Update,
  3. Multi [
     *  Seq [
        1. Single Compute,
        2. Single Filter,
        3. Single Filter,
        4. Single Update,
        5. Multi []
     ]
  ]
]"
`;

exports[`graphite: show store2 1`] = `
"Seq [
  1. Single Filter,
  2. Single Update,
  3. Multi []
]"
`;

exports[`graphite: store1 seq 1`] = `
Seq {
  "data": Array [
    Single {
      "data": Object {
        "data": Object {
          "filter": [Function],
        },
        "type": 14,
      },
    },
    Single {
      "data": Object {
        "data": Object {
          "store": Atom {
            "value": "foo | 1 | 11 | 101",
          },
        },
        "type": 15,
      },
    },
    Multi {
      "data": Set {
        Seq {
          "data": Array [
            Single {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "type": 11,
              },
            },
            Single {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "type": 14,
              },
            },
            Single {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "type": 14,
              },
            },
            Single {
              "data": Object {
                "data": Object {
                  "store": Atom {
                    "value": 18,
                  },
                },
                "type": 15,
              },
            },
            Multi {
              "data": Set {},
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`graphite: store2 seq 1`] = `
Seq {
  "data": Array [
    Single {
      "data": Object {
        "data": Object {
          "filter": [Function],
        },
        "type": 14,
      },
    },
    Single {
      "data": Object {
        "data": Object {
          "store": Atom {
            "value": 18,
          },
        },
        "type": 15,
      },
    },
    Multi {
      "data": Set {},
    },
  ],
}
`;

exports[`showcase: event foo 1`] = `
"Seq [
  1. Single Emit(foo),
  2. Multi [
     *  Seq [
        1. Single Compute,
        2. Single Filter,
        3. Single Filter,
        4. Single Update,
        5. Multi [
           *  Single Run
        ]
     ]
  ]
]"
`;

exports[`showcase: mapped 1`] = `
"Seq [
  1. Single Filter,
  2. Single Update,
  3. Multi [
     *  Single Run
  ]
]"
`;

exports[`showcase: store a 1`] = `
"Seq [
  1. Single Filter,
  2. Single Update,
  3. Multi [
     *  Single Run
  ]
]"
`;
